--- a/ux.html
+++ b/ux.html
@@ -42,13 +42,13 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qL9aVfwJ&k=Job&j=oROrbfw1&__jvst=Employee&__jvsd=sVZebhw5&__jvsc=Twitter&bid=nR0NnMwi'>Loanpal Careers - Senior UX Designer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Roseville, California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
 <h5><a href='https://dribbble.com/jobs/19490-Senior-UX-Designer?source=twitter'>
       Senior UX Designer at Primer - San Francisco, CA - Dribbble Design Jobs
   </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999698423478-ui-ux'>ClientSolv Technologies UI/UX | SmartRecruiters</a></h5> 
@@ -101,7 +101,7 @@
 <p><span class="badge badge-light">Minneapolis, MNUnited States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://coachhub.join.com/jobs/457564-ui-ux-designer-mobile-and-web-apps-m-f-d'>Job @ Coachhub (Berlin): UI/UX Designer ? Mobile &... | JOIN</a></h5> 
+<h5><a href='https://coachhub.join.com/jobs/457564-ui-ux-designer-mobile-and-web-apps-m-f-d'>Job @ Coachhub (Berlin): UI/UX Designer ? Mobile &... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -179,7 +179,7 @@
 <p><span class="badge badge-light">Hamburg Hamburg</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698350163-graphics-designer-ux-ui-design-part-time-full-time-'>Seeka Technology Graphics designer (UX/UI Design) (Part-time/ Full time) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698350163-graphics-designer-ux-ui-design-part-time-full-time-'>Seeka Technology Graphics designer (UX/UI Design) (Part-time/ Full time) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -241,11 +241,11 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tivix/7840075b-47be-4305-9e55-979f6f2a71aa'>Tivix - Mid-level or Senior UI/UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tivix/7840075b-47be-4305-9e55-979f6f2a71aa'>Tivix - Mid-level or Senior UI/UX Designer</a></h5> 
 <p><span class="badge badge-light">New York  San Francisco NYCLondon</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://www.amazon.jobs/en/jobs/939284/sr-ux-designer-amazon-gift-cards-incentives'>Sr. UX Designer, Amazon Gift Cards &amp; Incentives - Job ID: 939284 | Amazon.jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.amazon.jobs/en/jobs/939284/sr-ux-designer-amazon-gift-cards-incentives'>Sr. UX Designer, Amazon Gift Cards &amp; Incentives - Job ID: 939284 | Amazon.jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -327,7 +327,7 @@
 <p><span class="badge badge-light">Cupertino California  North Carolina  Atlanta, Georgia</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://worknola.com/job/324365/senior-professional-ux-researcher'>Senior Professional UX Researcher | WorkNOLA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://worknola.com/job/324365/senior-professional-ux-researcher'>Senior Professional UX Researcher | WorkNOLA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -353,7 +353,7 @@
 <p><span class="badge badge-light">Hong Kong Hong Kong</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://vgp.co.za/job/ux-ui-designer-innovative-tech-brand-cape-town-cbd/'>UX/UI Designer: Innovative Tech Brand ? Cape Town, CBD - VGP</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vgp.co.za/job/ux-ui-designer-innovative-tech-brand-cape-town-cbd/'>UX/UI Designer: Innovative Tech Brand ? Cape Town, CBD - VGP</a></h5> 
 <p><span class="badge badge-light">Cape Town</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -385,7 +385,7 @@
 <p><span class="badge badge-light">Zurich, Switzerland</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=twitter'>
+<h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=twitter'>
       Product designer (UX/UI) at Beeline - London, UK - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">London</span></p>
@@ -461,11 +461,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://producthire.net/job/ux-content-strategist/'>UX Content Strategist | PRODUCTHIRE.NET</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/ux-content-strategist/'>UX Content Strategist | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/n3twork/job/oVBpbfwQ'>N3TWORK Careers - Senior User Experience Designer (UI/UX)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/n3twork/job/oVBpbfwQ'>N3TWORK Careers - Senior User Experience Designer (UI/UX)</a></h5> 
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
